<resources>
    <string name="app_name">OneDay</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Login Activity -->
    <string name="activity_login_id">아이디</string>
    <string name="activity_login_pw">비밀번호</string>
    <string name="activity_login_confirm">비밀번호 확인</string>
    <string name="activity_login_submit">로그인</string>
    <string name="activity_login_sign_up">회원가입</string>
    <string name="activity_login_find_id">아이디 찾기</string>
    <string name="activity_login_find_pw">비밀번호 찾기</string>

    <!--Write Fragment-->
    <string name="fragment_write_no_msg">내용을 입력해주세요</string>

    <!-- 로그인 에러 -->
    <string name="sign_up_null">아이디/비밀번호를 확인하세요</string>
    <string name="sign_up_not_enough_letter">비밀번호를 8자리 이상 입력하세요</string>
    <string name="sign_up_no_special_letter">비밀번호에 특수문자를 사용하세요</string>

    <!--회원가입 에러 -->
    <string name="sign_up_id_already">해당 아이디가 이미 사용 중 입니다</string>
    <string name="sign_up_fail">회원가입에 실패하였습니다 잠시 후 다시 시도해주세요</string>

    <!--닉네임 설정 에러-->
    <string name="set_name_already">해당 닉네임이 이미 사용 중 입니다</string>
    <string name="set_name_fail">닉네임 설정에 실패했습니다 잠시 후 다시 시도해주세요</string>

    <!-- 글 쓰기 에러 -->
    <string name="post_err">글 쓰기에 실패햐였습니다.</string>

    <!-- 글 읽기 에러 -->
    <string name="read_err">글을 받아오지 못했습니다\n 잠시 후 다시 시도해주세요</string>

    <!-- 모든 글 읽어 옴 -->
    <string name="read_not_enough">더 이상 글이 없습니다.</string>

    <string name="fail_again">실패했습니다 잠시 후 다시 시도해주세요</string>

    <string name="find_id_null">일치하는 아이디가 없습니다</string>


    <string name="success">성공했습니다</string>
    <string name="post">등록되었습니다</string>



    <string name="facebook_app_id">107117226304241</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="notice">글</string>
    <string name="write">글쓰기</string>
    <string name="profile">내 프로필</string>
    <string name="setting">설정</string>
    <string name="my_notice">내 글</string>

    <string name="fragment_write_take_picture">사진 찍기</string>
    <string name="fragment_write_choice_picture">사진 선택</string>

    <string name="good">좋아요</string>
    <string name="bad">싫어요</string>
    <string name="comment">댓글</string>

    <string name="comment_input">댓글을 입력하세요</string>
    <string name="title_activity_find_id">FindIdActivity</string>

    <string name="fragment_find_id_name">이름</string>
    <string name="fragment_find_id_mail">메일</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="version">버전 : 1.0.0</string>
    <string name="maker">제작자 : 이동규, 김지민, 이지수</string>
    <string name="email">담당자 : wind.dong.dream@gmail.com</string>
    <string name="school">상일미디어 고등학교</string>
    <string name="logout">로그아웃</string>
    <string name="sign_out">회원탈퇴</string>
    <string name="gide">앱 이용 가이드</string>

    <string name="goodBy">좋아요 순</string>
    <string name="timeBy">최신 순</string>

    <string name="sign_out_title">정말 탈퇴하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="submit">확인</string>
    <string name="cancel">취소</string>
    <string name="update">수정</string>
    <string name="remove">제거</string>
</resources>
