<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/login_background">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="vertical">


        <EditText
            android:id="@+id/fragment_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_id"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:paddingLeft="@dimen/base_padding"
            android:textColor="#ff000000"
            android:textColorHint="#ff000000"/>



        <EditText
            android:id="@+id/fragment_login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:paddingLeft="@dimen/base_padding"
            android:hint="@string/activity_login_pw"
            android:textSize="20sp"
            android:textColor="#ff000000"
            android:textColorHint="#ff000000"
            android:password="true" />



        <Button
            android:id="@+id/fragment_login_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/activity_login_submit"
            android:textColor="@color/text_white"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:layout_marginBottom="@dimen/small_margin"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/fragment_login_sns_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:weightSum="3">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/activity_main_login_height"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/fragment_login_find_id"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_find_id"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/activity_main_login_height"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/fragment_login_find_pw"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_find_pw"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/activity_main_login_height"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/fragment_login_sign_up"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_sign_up"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>